test_suite/tests/ui/identifier/other_variant.stderr
error: #[serde(other)] may not be used on a variant identifier
 --> $DIR/other_variant.rs:6:5
  |
6 | /     #[serde(other)]
7 | |     Other,
  | |_________^
